--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,27 +10,27 @@ body {
 }
 
 .main {
-  width: 80vw;
+  width: 50vw;
   margin: auto;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .titulo {
   padding: 15px;
   width: 30vw;
   margin: auto;
-
 }
 
 .box {
   padding: 10px;
-  margin: 0 10px 0 10px;
+  margin: 10px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: white;
   border-radius: 0.5em;
   width: 30vw;
-  height: auto;
+  height: 30vh;
 }
 
 .btn {
@@ -49,5 +49,5 @@ body {
   display: block;
   padding: 0.5em;
   width: 100%;
-  height: 50px;
+  height: 20vh;
 }
