--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,12 +25,12 @@ body {
 
 .box {
   padding: 10px;
-  margin: 10px;
+  margin: 10px auto;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: white;
   border-radius: 0.5em;
   width: 30vw;
-  height: 30vh;
+  height: 33vh;
 }
 
 .btn {
@@ -47,6 +47,7 @@ body {
   border-radius: 0.5em;
   border: 1px solid rgba(0, 0, 0, 0.2);
   display: block;
+  margin-top: 10px;
   padding: 0.5em;
   width: 100%;
   height: 20vh;
