--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,8 +29,7 @@ body {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: white;
   border-radius: 0.5em;
-  width: 30vw;
-  height: 33vh;
+  width: 100%;
 }
 
 .btn {
@@ -50,5 +49,5 @@ body {
   margin-top: 10px;
   padding: 0.5em;
   width: 100%;
-  height: 20vh;
+  height: 10vh;
 }
