--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,3 +51,12 @@ body {
   width: 100%;
   height: 10vh;
 }
+.text-area {
+  border-radius: 0.5em;
+  border: 1px solid rgba(2, 136, 129, 0.2);
+  display: block;
+  margin-top: 10px;
+  padding: 0.5em;
+  width: 100%;
+  height: 10vh;
+}
