--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,61 +2,109 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: "Ubuntu", sans-serif;
+}
+
+html {
+  font-size: 62.5%; /* facilita o cálculo convertendo 1rem ao equivalente a 10px */
 }
 
 body {
-  background-color: lightgray;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: rgb(0, 0, 0) url("/src/img/skyrim-map-.jpg") no-repeat center
+    fixed;
+  color: rgb(255, 255, 255);
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.header {
+  /* margin: 0 auto; */
+  padding: 2.5em 0;
 }
 
 .main {
-  width: 50vw;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  background-color: rgba(0, 195, 255, 0.164);
+  border-radius: 2%;
+  padding: 2em;
 }
 
 .titulo {
-  padding: 15px;
-  width: 30vw;
-  margin: auto;
+  text-align: center;
+  margin: 0 auto;
+  color: #ededed;
+  font-size: 8rem;
+  font-family: "Dancing Script", cursive;
+}
+
+.title-text {
+  font-size: 2rem;
+  padding: 0.6em;
 }
 
 .box {
-  padding: 10px;
-  margin: 10px auto;
+  padding: 1em;
+  margin: 1em auto;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 0.5em;
-  width: 100%;
+  width: 50%;
 }
 
 .btn {
-  border: 0;
+  width: 49.5%;
+  border: none;
   color: white;
-  font-weight: bold;
-  background-color: blue;
-  padding: 10px;
-  margin-top: 10px;
+  background-color: rgba(2, 136, 129);
+  text-transform: uppercase;
+  padding: 1em;
   border-radius: 0.5em;
+  /* transition: 1s background; -- transição apenas no background */
+  transition: 1s all; /*transição em todos os elementos*/
+  cursor: pointer;
 }
 
-.text-input {
-  border-radius: 0.5em;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  display: block;
-  margin-top: 10px;
-  padding: 0.5em;
-  width: 100%;
-  height: 10vh;
+.btn:hover {
+  background-color: rgb(6, 112, 107);
+  transform: scale(0.99);
 }
+
 .text-area {
   border-radius: 0.5em;
-  border: 1px solid rgba(2, 136, 129, 0.2);
+  border: 1px solid rgba(2, 136, 129, 0.3);
   display: block;
-  margin-top: 10px;
+  margin: 1em 0;
   padding: 0.5em;
   width: 100%;
-  height: 10vh;
+  height: 20vh;
+}
+
+@media screen and (max-width: 720px) {
+  .titulo {
+    font-size: 5rem;
+  }
+
+  .main {
+    width: 90%;
+    padding: 0.1em;
+  }
+
+  .box {
+    width: 90%;
+  }
+
+  .btn {
+    width: 100%;
+    margin-bottom: 0.5em;
+  }
+
+  .btn:last-child {
+    margin-bottom: 0;
+  }
 }
